--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_auth: ^3.3.7
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.8
+  image_picker: ^0.8.4+8
+  firebase_storage: ^10.2.7
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
