--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,15 @@ dependencies:
   image_picker: ^0.8.4+8
   firebase_storage: ^10.2.7
   uuid: ^3.0.5
+  flutter_cached_pdfview: ^0.4.1
+  flutter_image_compress: ^1.1.0
+  flutter_pdfview: ^1.2.1
+  image_cropper: ^1.5.0
+  path_provider: ^2.0.9
+  file_picker: ^4.4.0
+  video_player: ^2.2.18
+  chewie: ^1.3.0
+
 
 dev_dependencies:
   flutter_test:
